third_party/rust/paste/tests/ui/case-warning.stderr
error: function `fooBar` should have a snake case name
  --> tests/ui/case-warning.rs:8:20
   |
8  |             pub fn [<foo $i>]() {}
   |                    ^^^^^^^^^^ help: convert the identifier to snake case: `foo_bar`
...
13 | m!(Bar);
   | ------- in this macro invocation
   |
note: the lint level is defined here
  --> tests/ui/case-warning.rs:1:9
   |
1  | #![deny(warnings)]
   |         ^^^^^^^^
   = note: `#[deny(non_snake_case)]` implied by `#[deny(warnings)]`
   = note: this error originates in the macro `m` (in Nightly builds, run with -Z macro-backtrace for more info)
